--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,4 +183,6 @@ input[type=number]::-webkit-outer-spin-button {
       display: none;
     }
     .fa-solid {cursor: pointer;}
-   
+//* img:hover {
+  transform: scale(1.2);
+}
